--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -1,7 +1,12 @@
 {
     "Améliorer ses relations au quotidien" : "حسن علاقاتك اليومية",
-
-    "COMMENT UTILISER RESSOURCES RELATIONNELLES DANS SON QUOTIDIEN ?" : "كيف تستخدم الموارد العلائقية للموقع كل يوم",
+    "Rechercher": "بحث",
+    "avec sa famille": "مع عائلته",
+    "avec ses amis" : "مع اصدقائه",
+    "au travail" : "في العمل",
+    "avec des inconnus" :"مع الغرباء",
+    "avec son/sa conjoint(e)" : "مع زوجته",
+    "COMMENT UTILISE :R RESSOURCES RELATIONNELLES DANS SON QUOTIDIEN ?" : "كيف تستخدم الموارد العلائقية للموقع كل يوم",
     "Accueil" : "ترحيب",
     "Aide" : "مساعدة",
     "Les ressources" : "الموارد",
@@ -11,5 +16,10 @@
     "Logo Ressources Relationnelles" : "شعار الموارد العلائقية",
     "Langues": "اللغات", 
     "Se connecter" : "يتصل",
-    "S'identifier" : "تسجيل الدخول"
+    "S'identifier" : "تسجيل الدخول",
+    "Comment adapter notre communication dans des situations sociales différentes ?": "كيف نكيف تواصلنا في المواقف الاجتماعية المختلفة؟",
+    "Comment améliorer nos échanges pour fonder des relations coopératives et efficaces ?": "كيف يمكننا تحسين تبادلاتنا من أجل إقامة علاقات تعاونية وفعالة؟",
+    "Ce site internet répond à ces questions et bien plus.": "هذا الموقع يجيب على هذه الأسئلة وأكثر.",
+    "Il nous aide à faire le point pour créer, renforcer et enrichir nos relations dans les situations suivantes." : "يساعدنا ذلك على إجراء تقييم لإنشاء علاقاتنا وتقويتها وإثرائها.",
+    "Communication" : "الاتصالات"
 }
