Attention : les types de ressources ne doivent pas être éditables. J'ai commenté le controller et la vue mais j'ai laissé les fonctions en place si la demande est faite de pouvoir les CRUD.

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -21,5 +21,6 @@
     "Comment améliorer nos échanges pour fonder des relations coopératives et efficaces ?": "كيف يمكننا تحسين تبادلاتنا من أجل إقامة علاقات تعاونية وفعالة؟",
     "Ce site internet répond à ces questions et bien plus.": "هذا الموقع يجيب على هذه الأسئلة وأكثر.",
     "Il nous aide à faire le point pour créer, renforcer et enrichir nos relations dans les situations suivantes." : "يساعدنا ذلك على إجراء تقييم لإنشاء علاقاتنا وتقويتها وإثرائها.",
-    "Communication" : "الاتصالات"
+    "Communication" : "الاتصالات",
+    "Les dernières ressources ajoutées": "أحدث الموارد المضافة"
 }
