Modification css + langue arabe .json + layout & includes. Mise en place des catégories : création d'une table couleurs liée + affichage + create + affichage en index du site.

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -1,4 +1,5 @@
 {
+    "Ressources Relationnelles est une application du Ministère des solidartés et de la santé pour :" : "الموارد العلائقية هو تطبيق لوزارة التضامن والصحة من أجل:", 
     "Améliorer ses relations au quotidien" : "حسن علاقاتك اليومية",
     "Rechercher": "بحث",
     "avec sa famille": "مع عائلته",
@@ -20,7 +21,7 @@
     "Comment adapter notre communication dans des situations sociales différentes ?": "كيف نكيف تواصلنا في المواقف الاجتماعية المختلفة؟",
     "Comment améliorer nos échanges pour fonder des relations coopératives et efficaces ?": "كيف يمكننا تحسين تبادلاتنا من أجل إقامة علاقات تعاونية وفعالة؟",
     "Ce site internet répond à ces questions et bien plus.": "هذا الموقع يجيب على هذه الأسئلة وأكثر.",
-    "Il nous aide à faire le point pour créer, renforcer et enrichir nos relations dans les situations suivantes." : "يساعدنا ذلك على إجراء تقييم لإنشاء علاقاتنا وتقويتها وإثرائها.",
+    "Il nous aide à faire le point pour créer, renforcer et enrichir nos relations dans les domaines relationnels suivants." : "يساعدنا ذلك على إجراء تقييم لإنشاء علاقاتنا وتقويتها وإثرائها.",
     "Communication" : "الاتصالات",
     "Les dernières ressources ajoutées": "أحدث الموارد المضافة"
 }
